Removed gap in empty show club view, fixed styling on top of clubs page, removed some old commented code in js file

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -300,6 +300,16 @@
 		padding: 2px 3vw;
 	}
 
+	.club-links p {
+		margin: 1vw;
+		width: 98vw;
+	}
+
+	.button-group {
+		margin: 1vw 0;
+		width: 98vw;
+	}
+
 	.club-stats {
 		flex-direction: column;
 	}
