--- a/app/assets/stylesheets/clubs.scss
+++ b/app/assets/stylesheets/clubs.scss
@@ -38,6 +38,14 @@
 	text-align: left;
 	font-size: 0.7rem;
 
+	p {
+		margin: 5px auto;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		max-width: 95vw;
+	}
+
 	.share-link {
 		background: skyblue;
 		color: black;
@@ -50,7 +58,7 @@
 	}
 	// padding: 10px 10vw;
 	.button-group {
-		margin: 40px 20px 0;
+		margin: 10px;
 		display: flex;
 		flex-direction: row;
 		justify-content: center;
